<resources>
    <string name="app_name">مودا</string>
    <string name="Mooda">مودا عالم الموضا</string>
    <string name="default_notification_channel_id" translatable="false">Mooda</string>
    <string name="GOOGLE_API">AIzaSyBe0BkHyXPH0VNpzrJ7FT_dIj_Fil68Vsk</string>
    <string name="Welcome">مرحبا بكم</string>
    <string name="Yes">نعم</string>
    <string name="No">لا</string>
    <string name="OK">حسنا</string>
    <string name="ExitTitle">خروج !</string>
    <string name="ExitMeg">هل تريد الخروج من التطبيق</string>
    <string name="Home">الرئيسية</string>
    <string name="BackToHome">العودة للرئيسية</string>
    <string name="Register">تسجيل جديد</string>
    <string name="HasNoAcc">ليس لديك حساب ؟ </string>
    <string name="HasAcc">لديك حساب ؟ </string>
    <string name="Login">تسجيل دخول</string>
    <string name="OldPassword">كلمة المرور القديمة</string>
    <string name="Password">كلمة المرور</string>
    <string name="ConfirmPassword">إعادة كتابة كلمة المرور</string>
    <string name="PassValid">ادخل كلمة المرور بشكل صحيح</string>
    <string name="ForgetPass"><u>نسيت كلمة المرور ؟</u></string>
    <string name="ForgetPass2">نسيت كلمة المرور </string>
    <string name="EmptyField">من فضلك ادخل جميع الحقول الإجبارية</string>
    <string name="TitleField">من فضلك ادخل عنوان الإعلان</string>
    <string name="MainPhotoField">من فضلك ادخل الصورة الرئيسية</string>
    <string name="PriceField">من فضلك ادخل السعر</string>
    <string name="DescField">من فضلك ادخل الوصف</string>
    <string name="CallField">من فضلك ادخل معلومات الاتصال</string>
    <string name="EnterField">من فضلك ادخل </string>
    <string name="ConditionField">يجب الموافقة على الشروط والاحكام أولا</string>
    <string name="Email">البريد الالكتروني</string>
    <string name="ValidMail">من فضلك ادخل البريد الالكتروني بشكل صحيح</string>
    <string name="UnKnownError">خطأ غير متوقع</string>
    <string name="NoMore">لا تستطيع الاختيار اكثر</string>
    <string name="UpdateDone">تم تحديث البيانات بنجاح</string>
    <string name="ChangeNumber">تغيير الرقم</string>
    <string name="EnterSmsCode">أدخل الرمز المكون من ستة أرقام الذي \n تم ارساله لرقم</string>
    <string name="Resend">أعادة إرسال الرمز خلال : </string>
    <string name="ResendClick">إضغط لإعادة الإرسال</string>
    <string name="Second">ثانية</string>
    <string name="Mobile">رقم الهاتف</string>
    <string name="About">عن التطبيق</string>
    <string name="SizesMap">دليل المقاسات</string>
    <string name="Contact">اتصل بنا</string>
    <string name="Msg">الرساله</string>
    <string name="Send">إرسال</string>
    <string name="Republish">اعادة نشر</string>
    <string name="ExistPhone">الهاتف الذي ادخلته مسجل من قبل </string>
    <string name="ExistEmail">البريد الالكتروني الذي ادخلته مسجل من قبل</string>
    <string name="Skip2">تخطي</string>
    <string name="NewPass">يرجى إدخال كلمة المرور الجديدة</string>
    <string name="NoData">لا يوجد اي بيانات</string>
    <string name="FullName">الأسم بالكامل</string>
    <string name="MyWallet">محفظتي</string>
    <string name="MyFavs">اعلاناتي المفضلة</string>
    <string name="MyAccount">حسابي</string>
    <string name="MyCurrentAds">اعلاناتي الحالية</string>
    <string name="MyEndedAds">اعلاناتي المنتهية</string>
    <string name="MyAds">إعلاناتي</string>
    <string name="AddFeats">أضف اعلانك المميز الآن</string>
    <string name="Contact2">نحن سعداء لتلقي استفساراتكم واقتراحاتكم</string>
    <string name="ForMore">للمزيد اتصل بـ</string>
    <string name="ValidMobile">من فضلك ادخل رقم الهاتف بشكل صحيح</string>
    <string name="ValidEmail">من فضلك ادخل البريد الالكتروني بشكل صحيح</string>
    <string name="Conditions">شروط وأحكام</string>
    <string name="ServicePrice">المبلغ الذي سيتم خصمه من محفظتك</string>
    <string name="WantDelete">هل تريد الحذف ؟</string>
    <string name="EditProfile">تعديل الملف الشخصي</string>
    <string name="Error">قد تفقد بعض البيانات بسبب قطع الاتصال .. ويتم اعاده تشغيل التطبيق</string>
    <string name="Start">ابدأ</string>
    <string name="DeleteAddress">حذف العنوان</string>
    <string name="ChooseBest">خصومات</string>
    <string name="InstantNotifications">خليك بالبيت</string>
    <string name="MostRecentForYou">خضروات والفواكه</string>
    <string name="MedLawDesc4">توصلك جميع الطلبات بأقل تكلفة توصيل</string>
    <string name="MedLawDesc3">خصومات وعروض يومية على مختلف المنتجات</string>
    <string name="MedLawDesc">يتيح لك تطبيق  <b> ميد لو </b>  حجز مواعيد للمحامين او الأطباء الأفضل والأقرب اليك</string>
    <string name="MedLawDesc2">تسوق جميع منتجات الخضار والفاكهة بأفضل جودة وأقل سعر</string>
    <string name="Contonio">متابعة</string>
    <string name="Save">حفظ</string>
    <string name="Pin">مثبت</string>
    <string name="ChangePass">تغيير كلمة المرور</string>
    <string name="DOB">تاريخ الميلاد</string>
    <string name="Notifications">الإشعارات</string>
    <string name="SelectCat">اختر الفئة</string>
    <string name="Cat">الفئة</string>
    <string name="CityArea">المحافظة والمنطقة</string>
    <string name="Cats">الاقسام</string>
    <string name="SearchTxt">عن ماذا تبحث؟</string>
    <string name="Search">البحث</string>
    <string name="Logout">تسجيل خروج</string>
    <string name="Agents">المندوبين</string>
    <string name="ConnectWithSeller">تواصل مع المعلن</string>
    <string name="Messages">رسائل</string>
    <string name="Account">حسابي</string>
    <string name="More">المزيد</string>
    <string name="More2">عرض المزيد من التفاصيل</string>
    <string name="MoreVIP">متوفر باقات إعلانية أخرى حسب الطلب الرجاء التواصل مع المندوب</string>
    <string name="SeeAlso">اعلانات مشابهه</string>
    <string name="SameSeller">اعلانات لنفس البائع</string>
    <string name="DK">د.ك</string>
    <string name="DK3">KWD</string>
    <string name="View">مشاهدة</string>
    <string name="Call">اتصال</string>
    <string name="WhatApp">واتساب</string>
    <string name="Messaging">مراسلة</string>
    <string name="Options">المواصفات</string>
    <string name="Description">وصف صاحب الإعلان</string>
    <string name="Advertiser">المعلن</string>
    <string name="Feats">العروض المميزة</string>
    <string name="Cancel">إلغاء</string>
    <string name="Help">مساعدة</string>
    <string name="Wallet">محفظتي</string>
    <string name="KNet">كي-نت</string>
    <string name="PaymentMethod">خيارات الدفع</string>
    <string name="Payment">الدفع</string>
    <string name="AddAddress">أضف عنوان جديد</string>
    <string name="Price">السعر</string>
    <string name="ShareLocation">مشاركة الموقع</string>
    <string name="AskSeller">اسأل البائع</string>
    <string name="AddedToCart">تم الاضافه للسلة</string>
    <string name="Type1">ملابس جاهزة</string>
    <string name="SetDefault">تعيين كعنوان افتراضي</string>
    <string name="ShippingAddress">عنوان التوصيل</string>
    <string name="EstimateTime">تاريخ التسليم المتوقع</string>
    <string name="Address">قم بأضافة عنوان توصيل</string>
    <string name="ValidPayment">يجب اختيار نوع الدفع</string>
    <string name="ValidType">يجب اختيار نوع السكن</string>
    <string name="GetLocation">تحديد موقعك</string>
    <string name="AddressName">اسم العنوان</string>
    <string name="GadaOptional">جادة ( اختياري )</string>
    <string name="Floor">الطابق</string>
    <string name="Room">رقم الشقة او الغرفة</string>
    <string name="StreetName">الشارع</string>
    <string name="Block">القطعة</string>
    <string name="Area">المنطقة</string>
    <string name="House">منزل</string>
    <string name="Work">عمل</string>
    <string name="MyAddress">عناوين التوصيل</string>
    <string name="Areas">المناطق</string>
    <string name="HouseType">نوع السكن</string>
    <string name="SelectHouseType">اختر نوع السكن</string>
    <string name="AddressAdded">تم اضافة العنوان</string>
    <string name="HouseName">رقم المنزل</string>
    <string name="ExtraDesc">ارشادات إضافية</string>
    <string name="ExtraDesc2">تفاصيل إضافية</string>
    <string name="AddNewAddress">أضف عنوان</string>
    <string name="Free">مجاني</string>
    <string name="Discount">خصم</string>
    <string name="Amount">الكمية</string>
    <string name="TotalOrders">تكلفة الطلب</string>
    <string name="CountDelivery">رسوم التوصيل</string>
    <string name="TotalDelivery">اجمالي التوصيل</string>
    <string name="PriceDetails">تفاصيل السعر</string>
    <string name="AddToCart">أضف إلى السلة</string>
    <string name="Cart">سلة المشتريات</string>
    <string name="OrderDetails">معلومات الطلب</string>
    <string name="TotalPrice">المبلغ الاجمالي</string>
    <string name="Products">منتجات</string>
    <string name="TheProducts">المنتجات</string>
    <string name="ProductProperties">مواصفات المنتج</string>
    <string name="SizeForms">فورم المقاسات</string>
    <string name="Sizes">المقاسات المتوفرة</string>
    <string name="Sizes2">المقاسات</string>
    <string name="Total">المجموع الإجمالي</string>
    <string name="Buy">اتمام الطلب</string>
    <string name="Type2">تفصيل</string>
    <string name="Tall">الطول * </string>
    <string name="ShoulderSize">عرض الكتف * </string>
    <string name="ChestSize">محيط الصدر * </string>
    <string name="WaistSize">عرض الخصر * </string>
    <string name="Buttocks">محيط الأرداف * </string>
    <string name="Sleeve"> طول الكم * </string>
    <string name="Cash">كاش</string>
    <string name="KNetHome">كي-نت من البيت</string>
    <string name="Add">إضافه</string>
    <string name="Confirm">حدد موقعك الحالي</string>
    <string name="HaveCoupon">لديك قسيمة خصم ! استعمل القسيمة في الخطوة التالية</string>
    <string name="HaveCoupon2">لديك كوبون خصم</string>
    <string name="Coupon">كوبون الخصم</string>
    <string name="CouponVal">قيمة الخصم</string>
    <string name="AddFav">أضف للمفضلة</string>
    <string name="OpenGPS">يجب عليك تشغيل خاصية تحديد الموقع اولا</string>
    <string name="GoOpenGPS">تشغيل تحديد المواقع</string>
    <string name="Delete">حذف</string>
    <string name="Edit">تعديل</string>
    <string name="SelectAdType">أختر الباقة المناسبة لك لرفع الإعلان</string>
    <string name="SelectArea">أختر المحافظة والمنطقة</string>
    <string name="IAgree">أوافق علي الشروط والأحكام</string>
    <string name="IAgree2"> أوافق علي <u> الشروط والأحكام </u></string>
    <string name="SetAddressDef">استخدم هذا العنوان</string>
    <string name="MainAddress">العنوان الاساسى</string>
    <string name="LoginFirst">يجب عليك تسجيل الدخول أولا</string>
    <string name="AddBalance">إضافة المزيد من الرصيد</string>
    <string name="BalancePackage">باقات الرصيد</string>
    <string name="Balance">الرصيد</string>
    <string name="FreeBalance">الرصيد المجاني</string>
    <string name="PaidBalance">الرصيد المدفوع</string>
    <string name="ValidArea">يجب اختيار منطقة</string>
    <string name="Ended">للمزيد من التفاصيل قم بفحص قسم\n الطلبات الخاص بك في حسابك</string>
    <string name="AddAd">اضافه اعلان</string>
    <string name="FinishOrder">تمت عملية الشراء بنجاح</string>
    <string name="FinishPayment">إتمام الشراء</string>
    <string name="OrderIDMain">رقم الطلب الرئيسى</string>
    <string name="Buy2">اشتري</string>
    <string name="Map">خريطة الموقع</string>
    <string name="Arabic">اللغة العربية</string>
    <string name="English">English</string>
    <string name="NewAd">أنشر اعلانك</string>
    <string name="EditAd">عدل اعلانك</string>
    <string name="AddPhoto">أضف صورة</string>
    <string name="AddMainPhoto">أختر صورة رئيسية</string>
    <string name="AddPhotos">أضف حتي 10 صورة</string>
    <string name="Next">التالي</string>
    <string name="Specifications">التفاصيل</string>
    <string name="CallDetails">معلومات الاتصال</string>
    <string name="AdTitle">عنوان الاعلان</string>
    <string name="DeliveryInfo">معلومات التوصيل</string>
    <string name="ReturnPolicy">سياسية الارجاع</string>
    <string name="Offers">العروض</string>
    <string name="MyOrders">طلباتي</string>
    <string name="ShareApp">مشاركة التطبيق</string>
    <string name="Request">طلب أنضمام</string>
</resources>