<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/navigation_more"
        android:icon="@mipmap/footer_icon5"
        android:title="@string/More" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@mipmap/footer_icon4"
        android:title="@string/Account" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@mipmap/footer_icon3"
        android:title="@string/Search" />

    <item
        android:id="@+id/navigation_offer"
        android:icon="@mipmap/footer_icon2"
        android:title="@string/Offers" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@mipmap/footer_icon1"
        android:title="@string/Home" />
</menu>
