<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/radius_msg2"
    android:layoutDirection="ltr"
    android:layout_margin="30dp"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_Delete"
            style="@style/BoldText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:drawableTop="@mipmap/ic_remove"
            android:padding="10dp"
            android:text="@string/Delete"
            android:textColor="#CA0000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/btn_Edit"
            style="@style/BoldText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:drawableTop="@mipmap/edit"
            android:background="@drawable/border_left_trans"
            android:padding="10dp"
            android:text="@string/Edit"
            android:textColor="#CA0000"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="#3F3F3F"></LinearLayout>

    <TextView
        android:id="@+id/btn_publish"
        style="@style/BoldText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:visibility="gone"
        android:padding="10dp"
        android:text="@string/Republish"
        android:textColor="#CA0000"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/btn_Cancel"
        style="@style/BoldText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/Cancel"
        android:textColor="#CA0000"
        android:textSize="14sp" />

</LinearLayout>