<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Footer"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/padding_10"
        android:fillViewport="true"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/MainPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:layout_marginTop="100dp"
                android:adjustViewBounds="true"
                android:src="@mipmap/explan2"
                android:transitionName="@string/app_name" />

            <TextView
                android:id="@+id/Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/MainPhoto"
               android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="25dp"
                android:text="@string/MostRecentForYou"
                android:textColor="#fff"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/MainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Title"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="25dp"
                android:text="@string/MedLawDesc2"
                android:textColor="#fff"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/MainText"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="46dp"
                android:layout_marginRight="25dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btn_Next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/Contonio"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/btn_Skip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:alpha=".58"
                    android:gravity="right"
                    android:text="@string/Skip2"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
