<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:layoutDirection="ltr">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">




        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="160dp"
            android:background="@drawable/btn_red_radius150"
            android:src="@mipmap/finish" />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="35dp"
            android:gravity="center"
            android:text="@string/FinishOrder"
            android:textColor="#000"
            style="@style/BoldText"
            android:textSize="18dp" />

        <TextView
            style="@style/LightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/Ended"
            android:textColor="#000"
            android:textSize="14sp" />



        <Button
            android:id="@+id/btn_Continue"
            style="@style/BoldText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="200dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/btn_red_radius5"
            android:elevation="2dp"
            android:text="@string/MyOrders"
            android:textColor="#ffffff"
            android:textSize="20sp" />

    </LinearLayout>
</FrameLayout>
