<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/radius_msg"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:layoutDirection="ltr"
    android:orientation="vertical" >



    <EditText
        android:id="@+id/Code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_Block"
        android:layout_margin="20dp"
        android:background="@drawable/btn_gray_radius0"
        android:drawablePadding="10dp"
        android:ems="10"
        android:gravity="right|center_vertical"
        android:hint="@string/Coupon"
        android:inputType="text"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="#26303D"
        android:textColorHint="#A8A8A8"
        android:textSize="20sp"
        android:textStyle="bold"></EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/MsgText"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_Cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_margin="7dp"
            android:text="@string/Cancel"
            android:textColor="#9EBC68"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_Add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="7dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/Add"
            android:textColor="#fff"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>